; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_PredicateLockTwoPhaseFinish.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_PredicateLockTwoPhaseFinish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@SerializableXactHashLock = common dso_local global i32 0, align 4
@LW_SHARED = common dso_local global i32 0, align 4
@SerializableXidHash = common dso_local global i32 0, align 4
@HASH_FIND = common dso_local global i32 0, align 4
@MySerializableXact = common dso_local global i32 0, align 4
@MyXactDidWrite = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PredicateLockTwoPhaseFinish(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.TYPE_4__, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @SerializableXactHashLock, align 4
  %10 = load i32, i32* @LW_SHARED, align 4
  %11 = call i32 @LWLockAcquire(i32 %9, i32 %10)
  %12 = load i32, i32* @SerializableXidHash, align 4
  %13 = load i32, i32* @HASH_FIND, align 4
  %14 = call i64 @hash_search(i32 %12, %struct.TYPE_4__* %6, i32 %13, i32* null)
  %15 = inttoptr i64 %14 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %15, %struct.TYPE_5__** %5, align 8
  %16 = load i32, i32* @SerializableXactHashLock, align 4
  %17 = call i32 @LWLockRelease(i32 %16)
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %19 = icmp eq %struct.TYPE_5__* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  br label %27

21:                                               ; preds = %2
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* @MySerializableXact, align 4
  store i32 1, i32* @MyXactDidWrite, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @ReleasePredicateLocks(i32 %25, i32 0)
  br label %27

27:                                               ; preds = %21, %20
  ret void
}

declare dso_local i32 @LWLockAcquire(i32, i32) #1

declare dso_local i64 @hash_search(i32, %struct.TYPE_4__*, i32, i32*) #1

declare dso_local i32 @LWLockRelease(i32) #1

declare dso_local i32 @ReleasePredicateLocks(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
